2010-02-18	Hans Rakers <hans at react.nl>

		* Remove some leftover debug output that broke compilation with
		  php-5.2 and --with-eaccelerator-debug

2010-02-04	Hans Rakers <hans at react.nl>

		* Fixed linking of ZEND_DECLARE_INHERITED_CLASS_DELAYED across
		  bb's in the optimizer. This fixes bug #399

2010-02-04	Bart Vanbrabant <bart at vanbrabant.eu>

		* Remove some leftovers from the lock api
		* Now really add the sched_yield command and not only in commented
		out

2010-02-03	Bart Vanbrabant <bart at vanbrabant.eu>

		* Include the resolve path function from php so it is available for
		older PHP versions as well. Includes that start file:// work now.
		* Enable phar caching: Files in included from a phar file are cached
		now. The phar archive is used to excute the stat on.
		* Enable check_mtime usage again
		* Use snprintf the right way. See #290
		* Add a call to sched_yield after a failed spinlock to prevent
		deadlock conditions. This should fix #381 and is a real fix for #340.
		Instead of using a fake select as yield, a check is added to disable
		spinlocks on systems that do not have sched_yield.
		* Fix spinlocks on Solaris with Sun Compiler. #325

2010-02-02  Bart Vanbrabant <bart at vanbrabant.eu>

		* Fix two compiler warnings

2010-02-01  Bart Vanbrabant <bart at vanbrabant.eu>

		* A retab on eaccelerator.c
		* Remove caching based on inodes
		* Reimplement eaccelerator_stat to speed it up: the new ea_stat is
		almost twice as fast as the old version with inodes. The tests were
		done on a file that includes 10k empty files.
		* Increment version to 1.0-dev

2010-01-22	Bart Vanbrabant <bart at vanbrabant.eu>

		* Release 0.9.6-rc2

2010-01-21	Hans Rakers <hans at react.nl>

		* Set op_array->early_binding in a later stage.
		  This fixes ticket #394

2010-01-20	Hans Rakers <hans at react.nl>

		* Some more work on delayed early binding. This fixes
		  ticket #388
		* Some reformatting in ea_dasm.c
		* Win32 VC6 project file updated
